# confreak

./: .gitignore  README.md
arduino/CONFREAK/: CONFREAK.ino  CONFREAK_LIB.h  keywords.txt
arduino/CONFREAK/examples/freakDemo/: freakDemo.ino
arduino/VECTOR/: VECTOR_LIB.h  keywords.txt
arduino/VECTOR/examples/vectorDemo/: vectorDemo.ino
cpp/: CMakeLists.txt  config_loader.h  confreak.cfg  confreak.m.cpp  confreak_arduinoTranslator.cpp  confreak_arduinoTranslator.h  confreak_comm.cpp  confreak_comm.h  confreak_jail.cpp  confreak_jail.h  confreak_schema.cpp  confreak_schema.h  confreak_warden.cpp  confreak_warden.h  curl_helper.h  start_confreak
nodejs/: Notes  index.js  package.json  start_mongo
nodejs/views/: application.ejs  application.js  index.ejs  register.ejs  register.js
